--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
-td, th {
-	border: 2px solid;
-  background-color: #44026C;
-  text-align: center;
+
+th {
+	border: 1px solid;
+    background-color: darkolivegreen;
   }
+
