--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ td, th {
 	border: 1px solid;
     background-color: darkolivegreen;
   }
+  img:hover{
+    width: 250px;
+    height: auto;
+    }
  
 
 
