--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
-
 td, th {
 	border: 1px solid;
     background-color: darkolivegreen;
   }
-  img:hover{
-    width: 250px;
-    height: auto;
-    }
- 
+
+img {  
+    max-width: 100%;  
+    height: auto;  
+  }
 
 
