--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,9 @@ td, th {
 	border: 1px solid;
     background-color: darkolivegreen;
   }
-
-img {  
-    max-width: 100%;  
-    height: auto;  
-  }
+  img{
+    width: 250px;
+    height: 250px;
+}
 
 
