--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,15 @@
 td, th {
 	border: 1px solid;
     background-color: darkolivegreen;
+    text-align: center;
   }
   img{
-    width: 250px;
-    height: 250px;
-}
+	width:100%;
+	height:auto;
+	margin-left:auto;
+	margin-right:auto;
+  }
 
-
+table {
+    text-align: center;
+  }
