--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@ td, th {
     text-align: center;
   }
   img{
-    width: auto;
-	height:auto;
+    width: 500px;
+	height:500px;
 	margin-left:auto;
 	margin-right:auto;
   }
