--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,26 @@
+
+header {
+    width:auto;
+    height:200px;
+    background:#A6375F;
+    border-bottom: 2px solid white;
+    text-align: center;
+    vertical-align:middle;
+    line-height: 200px;
+}
+body {
+    background:#8C5454;
+    font-family: 'Gloock', serif;
+}
 td, th {
 	border: 1px solid;
     background-color: darkolivegreen;
     text-align: center;
   }
+
   img{
     width: 500px;
-	height:500px;
-
+	  height:500px;
   }
 
 table {
@@ -14,5 +28,5 @@ table {
   }
 h1{
     font-style: italic;
-    color: saddlebrown;
+   color: saddlebrown;
 }
