--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 
 td, th {
-	border: 1px solid;
+	border: 1px solid black;
   background-color: darkolivegreen;
   text-align: center;
+  
   }
  h1{
   font-style: italic;
-  color: saddlebrown;
+  color:dimgrey;
 }
 img{
   width: 500px;
@@ -15,4 +16,8 @@ img{
 
 table {
   text-align: center;
+  }
+.facts{
+  font-size: medium;
+  font-weight: bold;
   }
