--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ img{
 
 table {
   text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 .facts{
   font-size: medium;
