--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ td, th {
   border: 1px solid black;
   background-color: darkolivegreen;
   text-align: center;
-  
+  font-weight: bold;
   }
  h1{
   font-style: italic;
