--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,10 @@ td, th {
   background-color: darkolivegreen;
   text-align: center;
   font-weight: bold;
+  padding: 15px;
   }
 body{
   font-weight: bold;
-  background-size: cover;
   }
  h1{
   font-style: italic;
